[gd_scene load_steps=7 format=2]

[ext_resource path="res://postprocess-effects/CRTeffect_layer.tscn" type="PackedScene" id=1]
[ext_resource path="res://pixelPlanets/Theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/mode-menu.gd" type="Script" id=3]
[ext_resource path="res://fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 14
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 4
font_data = ExtResource( 4 )

[node name="mode-menu" type="Control"]
modulate = Color( 0, 1, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -242.0
margin_top = 40.0
margin_right = 242.0
margin_bottom = -40.0
size_flags_vertical = 7
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeamDeathmatch" type="Button" parent="VBoxContainer"]
margin_right = 484.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Team Deathmatch"

[node name="CaptureTheFlag" type="Button" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 484.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Capture the flag (beta)"

[node name="Deathmatch" type="Button" parent="VBoxContainer"]
margin_top = 176.0
margin_right = 484.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Deathmatch (beta)"

[node name="BattleRoyal" type="Button" parent="VBoxContainer"]
margin_top = 264.0
margin_right = 484.0
margin_bottom = 344.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Battle Royal (in development)"

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 352.0
margin_right = 484.0
margin_bottom = 432.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 3.0
max_value = 15.0
step = 3.0
value = 6.0
rounded = true
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HSlider"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "6 min"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="VBoxContainer"]
margin_left = 80.0
margin_top = 440.0
margin_right = 404.0
margin_bottom = 520.0
size_flags_horizontal = 6
size_flags_vertical = 3
text = "return to main menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CRTeffect_layer" parent="." instance=ExtResource( 1 )]
[connection signal="pressed" from="VBoxContainer/TeamDeathmatch" to="." method="_on_TeamDeathmatch_pressed"]
[connection signal="pressed" from="VBoxContainer/CaptureTheFlag" to="." method="_on_CaptureTheFlag_pressed"]
[connection signal="pressed" from="VBoxContainer/Deathmatch" to="." method="_on_Deathmatch_pressed"]
[connection signal="value_changed" from="VBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
